app/_styles/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

/* ▣▣▣▣▣▣▣▣▣▣▣▣▣▣▣▣▣▣▣▣▣▣▣▣ */
/* ↯↯↯↯↯↯↯↯↯↯↯↯↯ Spinner ↯↯↯↯↯↯↯↯↯↯↯↯↯ */
/* ▣▣▣▣▣▣▣▣▣▣▣▣▣▣▣▣▣▣▣▣▣▣▣▣ */

@layer components {
  .spinner {
    margin: 3.2rem auto 1.6rem;
    width: 64px;
    aspect-ratio: 1;
    position: relative;
    border-radius: 50%;

    background-image: conic-gradient(
      theme("colors.primary.200") 0 10%,
      theme("colors.primary.700") 10% 40%,
      theme("colors.accent.500") 40% 60%,
      transparent 60% 100%
    );

    mask: radial-gradient(farthest-side, transparent calc(100% - 8px), #000 0);

    animation: spin 1.1s linear infinite;
  }

  .spinner::before {
    content: "";
    position: absolute;
    inset: 0;
    border-radius: 50%;
    border: 6px solid transparent;
    border-top-color: theme("colors.primary.400");
    border-right-color: theme("colors.primary.400");
    animation: spin-rev 1.6s linear infinite;
  }

  .spinner-mini {
    margin: 0;
    width: 22px;
    aspect-ratio: 1;
    position: relative;
    border-radius: 50%;
    background-image: conic-gradient(
      theme("colors.primary.200") 0 20%,
      theme("colors.primary.600") 20% 50%,
      transparent 50% 100%
    );
    mask: radial-gradient(farthest-side, transparent calc(100% - 4px), #000 0);
    animation: spin 1s linear infinite;
  }

  .spinner-mini::before {
    content: "";
    position: absolute;
    inset: 0;
    border-radius: 50%;
    border: 3px solid transparent;
    border-top-color: theme("colors.accent.500");
    animation: spin-rev 1.4s linear infinite;
  }

  @keyframes spin {
    to {
      transform: rotate(1turn);
    }
  }
  @keyframes spin-rev {
    to {
      transform: rotate(-1turn);
    }
  }
}

/* ▣▣▣▣▣▣▣▣▣▣▣▣▣▣▣▣▣▣▣▣▣▣▣▣ */
/* ↯↯↯↯↯↯↯↯↯↯↯↯ Date Picker ↯↯↯↯↯↯↯↯↯↯↯↯ */
/* ▣▣▣▣▣▣▣▣▣▣▣▣▣▣▣▣▣▣▣▣▣▣▣▣ */

.rdp {
  --rdp-cell-size: 32px !important;
  --rdp-accent-color: theme("colors.accent.500") !important;
  --rdp-background-color: theme("colors.accent.600") !important;
  margin: 0 !important;
}

